torch-compiler/src/test/resources/negative/EntityWithLongFieldsWithoutIdAnnotation.java
package negative;

import org.brightify.torch.annotation.Entity;

@Entity
public class EntityWithLongFieldsWithoutIdAnnotation{
    Long id1;
    Long id2;
    Long id3;
}